# NTUT-UTL-nRF-Connect-SDK-Monorepo

./: .gitmodules  README.md
apps/ad5940_electrochemical_module/: CMakeLists.txt  Kconfig
apps/ad5940_electrochemical_module/boards/: johnny_oval.overlay
apps/ad5940_electrochemical_module/prj/: prj_johnny_oval.conf
apps/ad5940_electrochemical_module/src/: main.c
apps/ad5940_electrochemical_module/src/hardware/: ad5940_hardware.c  ad5940_hardware.h  ad5940_pins_config_impl_zephyr.c  ad5940_pins_config_impl_zephyr.h
apps/ad5940_electrochemical_module/src/lock/: commands_start_lock.h  commands_stop_lock.h
apps/ad5940_electrochemical_module/src/lock/zephyr/: commands_start_lock_impl_zephyr.c  commands_start_lock_impl_zephyr.h  commands_stop_lock_impl_zephyr.c  commands_stop_lock_impl_zephyr.h
apps/examples/peripheral_nus_utl/: CMakeLists.txt  prj.conf
apps/examples/peripheral_nus_utl/src/: main.c
apps/virus_detector_cart/: CMakeLists.txt
apps/virus_detector_cart/boards/: virus_detector_cart.overlay
apps/virus_detector_cart/prj/: prj.conf
apps/virus_detector_cart/src/: main.c
apps/virus_detector_cart/src/src/: valve.c  valve.h
domains/ad5940_controller/cmake/: ad5940_controller.cmake
domains/ad5940_controller/src/: ad5940_controller.c  ad5940_controller.h
domains/ad5940_controller/src/cal/: ad5940_controller_cal.c  ad5940_controller_cal.h
domains/ad5940_controller/src/const/: ad5940_controller_const.h
domains/ad5940_controller/src/event/: ad5940_controller_event.h
domains/ad5940_controller/src/reset/: ad5940_controller_reset.c  ad5940_controller_reset.h
domains/ad5940_controller/src/trigger/: ad5940_controller_trigger.c  ad5940_controller_trigger.h
domains/ad5940_impl/cmake/: ad5940_impl.cmake
domains/ad5940_impl/src/: ad5940_impl.h
domains/ad5940_impl/src/intc_lock/: ad5940_intc0_lock.h  ad5940_intc1_lock.h
utils/driver/ad5940/apps/: ad5940_adc_seq.c  ad5940_adc_seq.h  (+6 more)
utils/driver/stepper_motor/: CMakeLists.txt
utils/gpio/: CMakeLists.txt
utils/spi/: CMakeLists.txt
utils/spi/zephyr/: spi_impl_zephyr.c
(+50 files in other folders)
